contour/manifests/echoservers-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-conformance-echo-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver
    spec:
      containers:
      - name: conformance-echo
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        - name: https-api
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
        volumeMounts:
          - mountPath: /run/secrets/certs/
            name: echoserver-cert
            readOnly: true
          - mountPath: /run/secrets/ca/
            name: internal-root-ca
            readOnly: true            
      volumes:
      - name: echoserver-cert
        secret:
          secretName: echoserver-cert
      - name: internal-root-ca
        secret:
          secretName: internal-root-ca
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  - name: https
    port: 443
    targetPort: https-api
  selector:
    app.kubernetes.io/name: echoserver
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver-secure
spec:
  virtualhost:
    fqdn: protected.127-0-0-101.nip.io
    tls:
      secretName: ingress
      enableFallbackCertificate: true
  routes:
    - services:
        - name: echoserver
          port: 443
          protocol: h2
          validation:
            caSecret: internal-root-ca
            subjectName: echoserver
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver-insecure
spec:
  virtualhost:
    fqdn: insecure.127-0-0-101.nip.io
  routes:
    - services:
        - name: echoserver
          port: 443
          protocol: h2
          validation:
            caSecret: internal-root-ca
            subjectName: echoserver
